# aws-org-inventory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  aws_org_inventory.py  cloudcontrol_demo.py  cove_cli.py  org_config.py  pyproject.toml  test.py  test_apis.py  test_org_config.py
.github/workflows/: publish.yaml  test.yaml
