[tool.poetry]
name = "aws-org-inventory"
version = "0.5.2"
description = " Dumps to CSV all the resources in an organization's member accounts"
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.8"
botocove = "^1.3.1"
boto3 = "^1.18.52"
pandas = "^1.3.3"
boto-collator-client = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.28.0"
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"
yamllint = "^1.26.3"

[tool.poetry.scripts]
aws-org-inventory = "aws_org_inventory:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
